Fixing nav alignment
fixing nav alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -293,7 +293,7 @@ input, select, textarea {
 /* Top navigation */
 	.topnav {
 		display: flex;
-		align-items: stretch;
+		align-items: end;
 		justify-content: center;
 		margin-top: 1em;
 		
